<resources>
    <string name="app_name">NUMAD21S_Archita_Sundaray</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="about">About</string>
    <string name="home">Home</string>

    <string name="first_fragment">Hello World!</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="name">Archita Sundaray</string>
    <string name="email">sundaray.a@northeastern.edu</string>
    <string name="buttonA">A</string>
    <string name="buttonB">B</string>
    <string name="buttonC">C</string>
    <string name="buttonD">D</string>
    <string name="buttonE">E</string>
    <string name="buttonF">F</string>
    <string name="clikyButton">Clicky clicky</string>
    <string name="greetings">Hey, buddy!</string>
    <string name="linkCollectorButton">Link Collector</string>
    <string name="addLinks">Add</string>
    <string name="item_name">Item Name</string>
    <string name="item_description">Description</string>
    <string name="description">This image acts as an icon.</string>
    <string name="locator">Locator</string>
    <string name="buttonLocation">Get Location</string>
    <string name="atYourService">At Ur Service</string>
    <string name="web_dest_text">https://www.northeastern.edu</string>
    <string name="web_dest">Launch Website</string>
    <string name="webServiceUrl">https://api.zippopotam.us/us/02115</string>
    <string name="webServiceButton">Ping Web Service</string>
    <string name="blank">***</string>
    <string name="city">City :</string>
    <string name="state">State :</string>
    <string name="latitude">Latitude :</string>
    <string name="longitude">Longitude :</string>
</resources>